# llm-scratch-lab

./: .gitignore  README.md  my_utils.py  playnotebook.py  pyproject.toml
dataset/: DataLoaders.py  PretrainDataset.py
models/Gemma3/: Base.py  GatedZerocenterd.py
tokenizer/: TrainTokenizer.py  tokenizer_32k.json  tokenizer_32k.model  tokenizer_32k.vocab
tokenizer/hf_tokenizer_32k/: chat_template.jinja  tokenizer.json
train/: menhera.txt  oji.txt  train_play.py  train_play_gatedzerocenterd.py
