[project]
name = "llm-scratch-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.5.0",
    "ipykernel>=7.2.0",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]
