[project]
name = "llm-scratch-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.5.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "pydantic>=2.12.5",
    "schedulefree>=1.4.1",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.20.0",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "wandb>=0.25.0",
]

[dependency-groups]
dev = [
    "setuptools<82",
]
